--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   flutter_svg: ^0.22.0
+  retrofit: ^3.0.1
+  analyzer: ^2.0.0
+  dio: ^4.0.4
+  json_serializable: ^6.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^3.0.1+1
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
