--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   analyzer: ^2.0.0
   dio: ^4.0.4
   json_serializable: ^6.1.3
+  dartz: ^0.10.1
+  data_connection_checker: ^0.3.4
+
 
 dev_dependencies:
   flutter_test:
