--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   json_serializable: ^6.1.3
   dartz: ^0.10.1
   data_connection_checker: ^0.3.4
+  pretty_dio_logger: ^1.2.0-beta-1
+  shared_preferences: ^2.0.11
 
 
 dev_dependencies:
