--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   data_connection_checker: ^0.3.4
   pretty_dio_logger: ^1.2.0-beta-1
   shared_preferences: ^2.0.11
+  freezed: ^1.1.0
 
 
 dev_dependencies:
