--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   dio: ^4.0.4
   json_serializable: ^6.1.3
   dartz: ^0.10.1
-  data_connection_checker: ^0.3.4
   pretty_dio_logger: ^1.2.0-beta-1
   shared_preferences: ^2.0.11
   freezed: ^1.1.0
+  get_it: ^7.2.0
+  internet_connection_checker: ^0.0.1+3
 
 
 dev_dependencies:
