--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed: ^1.1.0
   get_it: ^7.2.0
   internet_connection_checker: ^0.0.1+3
+  lottie: ^1.2.1
 
 
 dev_dependencies:
@@ -76,6 +77,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
